<resources>
    <string name="app_name">Getat</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_terms">Terms</string>
    <string name="str_login">Login</string>
    <string name="str_create_account">Agree &amp; Create Account</string>
    <string name="str_name">Name</string>
    <string name="str_mobile">Mobile</string>
    <string name="str_address">Address</string>
    <string name="str_email">Email</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password">Forgot your password?</string>
    <string name="str_txt_terms_condition">I have read and agree with </string>
    <string name="str_terms_condition">Terms &amp; Conditions</string>
    <string name="msg_email_validation">Please enter your email</string>
    <string name="msg_address_validation">Please enter your delivery address</string>
    <string name="msg_mobile_validation">Please enter your mobile number</string>
    <string name="msg_cvv_validation">Please enter your CVV number</string>
    <string name="msg_cvv_error">Invalid CVV number</string>
    <string name="msg_name_validation">Please enter your name</string>
    <string name="msg_invalid_email_validation">Invalid email format</string>
    <string name="msg_password_validation">Please enter your Password</string>
    <string name="msg_confirm_password_validation">Please enter your confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_password_confirm_password_mismatch">Password and confirm password should be same</string>
    <string name="str_invalid_login">Invalid Email or Password</string>
    <string name="str_pay_by">Pay by</string>
    <string name="str_month">Month</string>
    <string name="str_year">Year</string>
    <string name="title_activity_temp">TempActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>
    <string name="str_search">Search</string>

</resources>
