<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lytFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_16">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:background="@drawable/login_edittext_bg"
                    android:hint="@string/str_name"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:background="@drawable/login_edittext_bg"
                    android:hint="@string/str_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_4"
                    android:background="@drawable/login_edittext_bg"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:background="@drawable/login_edittext_bg"
                    android:hint="@string/str_confirm_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dimen_8"
                    android:paddingTop="@dimen/dimen_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_txt_terms_condition"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtTermsConditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_4"
                        android:text="@string/str_terms_condition"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                android:background="@color/colorAccent"
                android:text="@string/str_create_account"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>