<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lytFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_16">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:hint="@string/str_email"
                    android:textColor="@color/white"
                    android:background="@drawable/login_edittext_bg"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:maxLines="1"
                    android:background="@drawable/login_edittext_bg"
                    android:layout_marginBottom="@dimen/dimen_4"/>

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:paddingTop="@dimen/dimen_8"
                    android:paddingLeft="@dimen/dimen_8"
                    android:paddingBottom="@dimen/dimen_8"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_gravity="right"
                    android:text="@string/str_forgot_password"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/str_login"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_8"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:id="@+id/lytSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_16"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/str_sign_up"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_16"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/str_terms"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>